--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -2755,7 +2755,7 @@ hides the force update buttons
 }
 
 .modal--laser-job-done .modal-body .modal__modal-body--social-media-section {
-  height: 100px;
+  height: 150px;
   text-shadow: 0 0 20px rgba(255, 255, 255, 0);
   transition: text-shadow 0.8s ease-in;
   border-radius: 8px;
@@ -2767,6 +2767,7 @@ hides the force update buttons
 .modal--laser-job-done .modal-body .modal__modal-body--social-media-section p {
   font-size: 1.8em;
   color: #ffffff;
+  line-height: 31px;
 }
 
 .modal--laser-job-done .modal-body .modal__modal-body--social-media-section p.modal__p--hashtag {
