Revert "SW-2603 v0.12.0 backpropagation to alpha (#1661)"
This reverts commit f637cf223405cc77184a4b8f90b71ccbd5bb955b, reversing
changes made to 342259ed7ba1cfe6bfa9da292eedbc1449325ea5.

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3612,6 +3612,8 @@ button#terminal-send {
   color: #e25303;
 }
 
+/* Hard refresh overlay */
+
 /* Support Standalone */
 
 /* Hard refresh overlay */
