--- a/octoprint_mrbeam/templates/settings/about_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/about_settings.jinja2
@@ -106,6 +106,7 @@
                     <div><strong>{{ _('find.mr-beam service') }}:</strong> <a href="http://find.mr-beam.org" target="_blank" data-test="about-settings-link-find-mr-beam-org"> find.mr-beam.org</a></div>
                     <div><strong>{{ _('Online resources') }}:</strong> <a href="{{ mrbeamorg_downloads }}" target="_blank" data-test="about-settings-link-downloads"> {{ _('Mr Beam Downloads') }}</a></div>
                     <div><strong>{{ _('Source code') }}:</strong> <a href="https://github.com/mrbeam" target="_blank" data-test="about-settings-link-github"> github.com/mrbeam</a></div>
+                    <div><strong>{{ _('Recommend Mr Beam') }}</strong> {{ _("and earn cashback") }}: <a href="https://www.aklamio.com/community/shops/mrbeam_de" target="_blank">aklamio.com</a></div>
                 </ul>
             </div>
         </div>
