fix http link to find.mr-beam

--- a/octoprint_mrbeam/templates/settings/about_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/about_settings.jinja2
@@ -103,7 +103,7 @@
                         <a href="https://www.tiktok.com/@mrbeamlasers" target="_blank" data-test="about-settings-link-tiktok">TikTok</a>
                     </div>
                     <div><strong>{{ _('Official user group') }}</strong> {{ _('on Facebook') }} ({{ _('German') }}): <a href="https://www.facebook.com/groups/officialmrbeamusers/" target="_blank" data-test="about-settings-link-facebook-group"> Official Mr Beam Lasers User Group</a></div>
-                    <div><strong>{{ _('find.mr-beam service') }}:</strong> <a href="http://find.mr-beam.org" target="_blank" data-test="about-settings-link-find-mr-beam-org"> find.mr-beam.org</a></div>
+                    <div><strong>{{ _('find.mr-beam service') }}:</strong> <a href="https://find.mr-beam.org" target="_blank" data-test="about-settings-link-find-mr-beam-org"> find.mr-beam.org</a></div>
                     <div><strong>{{ _('Online resources') }}:</strong> <a href="{{ mrbeamorg_downloads }}" target="_blank" data-test="about-settings-link-downloads"> {{ _('Mr Beam Downloads') }}</a></div>
                     <div><strong>{{ _('Source code') }}:</strong> <a href="https://github.com/mrbeam" target="_blank" data-test="about-settings-link-github"> github.com/mrbeam</a></div>
                 </ul>
