--- a/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
@@ -107,7 +107,7 @@
 							<li class="divider"></li>
 							<li><a href="#" onclick="$('#support_overlay').modal('show')" id="support_menu_item" data-test="mrbeam-ui-index-tab-support"><i class="fa fa-life-ring"></i> {{ _('Support') }}</a></li>
 							<li class="divider show_only_online"></li>
-							<li class="show_only_online"><a href="http://find.mr-beam.org" target="_blank" data-test="mrbeam-ui-index-tab-laser-find-mr-beam"><i class="icon-chevron-right"></i> {{ _('Find my Mr Beam') }}</a></li>
+							<li class="show_only_online"><a href="https://find.mr-beam.org" target="_blank" data-test="mrbeam-ui-index-tab-laser-find-mr-beam"><i class="icon-chevron-right"></i> {{ _('Find my Mr Beam') }}</a></li>
                         </ul>
 					</li>
 				</ul>
