--- a/octoprint_mrbeam/templates/tab_workingarea.jinja2
+++ b/octoprint_mrbeam/templates/tab_workingarea.jinja2
@@ -1,4 +1,4 @@
-				<div class="tab-pane active" id="workingarea">
+				<div class="tab-pane active" id="workingarea" data-test="mrbeam-ui-tab-workingarea">
 					<div class="container-fluid">
 						<div class="row-fluid">
 							<div class="span4 accordion full-col" style="margin-bottom:0;">
