SW-2543 - revert hopsctoch lib changes - moved the changes in our files with a observer and a css override - moved backdrop observer in observer helper file

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3698,3 +3698,11 @@ button#terminal-send {
 }
 
 /* Corner Calibration */
+
+/* Guided Tour */
+div.hopscotch-bubble .hopscotch-bubble-number {
+  background: #e25303 none !important;
+  border-radius: 20px !important;
+  padding: 0 0 0 0 !important;
+}
+/* Guided Tour */
