SW-2543 get the guided tour working again page 7 guided tour (#1682)
- fix guided tour not working
- changed guided tour design
- improve focus step
- added guided tour as extra nav item
- add congratulations modal TODO in SW-2544
- moved the changes in our files with a observer and a css override
- moved backdrop observer in observer helper file
- moved backdrop fix to function

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

--- a/octoprint_mrbeam/templates/tab_workingarea.jinja2
+++ b/octoprint_mrbeam/templates/tab_workingarea.jinja2
@@ -1,4 +1,4 @@
-				<div class="tab-pane active" id="workingarea">
+				<div class="tab-pane active" id="workingarea" data-test="mrbeam-ui-tab-workingarea">
 					<div class="container-fluid">
 						<div class="row-fluid">
 							<div class="span4 accordion full-col" style="margin-bottom:0;">
@@ -51,8 +51,7 @@
 
 													<div class="row-fluid print-control btn-group" style="display: none;" data-bind="visible: loginState.isUser">
 														<button id="laser_button" data-test="working-area-laser-button" class="btn btn-danger span6"
-                                                                data-bind="click: conversion.show_conversion_dialog, enable: {{ 'true' if isDevelop and 'enableLaserButton' in request.args else 'false'}} || (state.isOperational() && state.isReady() && !state.isPrinting() && !state.isPaused() && loginState.isUser() && !workingArea.working_area_empty()), attr: {title: state.titlePrintButton}"
-                                                                id="job_print">
+                                                                data-bind="click: conversion.show_conversion_dialog, enable: {{ 'true' if isDevelop and 'enableLaserButton' in request.args else 'false'}} || (state.isOperational() && state.isReady() && !state.isPrinting() && !state.isPaused() && loginState.isUser() && !workingArea.working_area_empty()), attr: {title: state.titlePrintButton}">
                                                             <i class="icon-white icon-fire"
                                                                data-bind="css: { 'wobble': state.isPrinting()}"></i>
                                                             <span>{{ _('Laser') }}</span>
