--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3714,4 +3714,15 @@ div.hopscotch-bubble .hopscotch-bubble-number {
   border-radius: 20px !important;
   padding: 0 0 0 0 !important;
 }
+#congratulations div a i {
+  font-size: 7em;
+  padding: 0 3px;
+}
+#congratulations.modal {
+  width: 700px;
+  left: 45%;
+}
+#congratulations div a:hover {
+  text-decoration: none;
+}
 /* Guided Tour */
