--- a/octoprint_mrbeam/templates/modules/social_media_channels.jinja2
+++ b/octoprint_mrbeam/templates/modules/social_media_channels.jinja2
@@ -1,10 +1,11 @@
 {# included in firstrun_end.jinja2 and laserjob_done.jinja2 #}
-<a href="https://www.instagram.com/mrbeamlasers/" target="_blank"><i class="icon-instagram"></i></a>
+<div class="social_media_square_icons">
+<a href="https://www.instagram.com/mrbeamlasers/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
 <a href="https://www.facebook.com/mrbeamlasercutter/" target="_blank"><i
-        class="icon-facebook-sign"></i></a>
-<a href="https://twitter.com/MrBeamLasers" target="_blank"><i class="icon-twitter-sign"></i></a>
-<a href="https://www.pinterest.com/mrbeamlasers" target="_blank"><i class="icon-pinterest-sign"></i></a>
+        class="fa-brands fa-facebook"></i></a>
+<a href="https://twitter.com/MrBeamLasers" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+<a href="https://www.pinterest.com/mrbeamlasers" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
 <a href="https://www.youtube.com/channel/UC8CIMavXllp6S61JgEqSm4A" target="_blank"><i
-        class="icon-youtube-sign"></i></a>
-<a href="https://www.linkedin.com/company/mrbeamlasers" target="_blank"><i
-        class="icon-linkedin-sign"></i></a>
+        class="fa-brands fa-youtube"></i></a>
+<a href="https://www.tiktok.com/@mrbeamlasers" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+</div>
