--- a/octoprint_mrbeam/static/css/wizard.css
+++ b/octoprint_mrbeam/static/css/wizard.css
@@ -213,4 +213,15 @@ input[type="radio"] {
   padding-right: 20px;
 }
 
+#wizard_firstrun_end div a:hover {
+  text-decoration: none;
+}
+
+#wizard_firstrun_end .social_media_square_icons {
+  font-size: 2.55em;
+}
+
+#wizard_firstrun_end h3 {
+  color: #e25303;
+}
 /* Welcome wizard - end */
